[plugins] PluginEnabler is a standalone entity
PluginEnableDisableAction, PluginEnabledState moved to core; PluginManagerCore fields encapsulated; minor reformat

GitOrigin-RevId: c32915233d638c7263578f8e5f5b348a18392d39